
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-06-02 ruhllatio
	Add: JSON Response formatting
2016-06-01 ruhllatio
	Mrg: PR - Feature media #2153
	Fix: Regex error in SP from #2153
	Chg: Make nzb-export comments reflect a more specific date format
	Fix: nzb-import using filenames as searchname now strips .gz as well as .nzb
	Mrg: PR - Feature apixmlwrite #2155
	Fix: Caps category issue caused by final class moves
	Fix: Caps Multi to single call not sending data in the correct format
	Fix: Caps subcategory listing sending subcatlist as element should be just subcat
	Fix: TV API query will wrongly return an tv_episodes_id value when no sxx/exx/airdate is passed
	Fix: Typo in RSS query
	Chg: Improve RSS query times by preserving JOIN orders
2016-06-01 DariusIII
	Upd: Composer.lock to match composer.json.
2016-05-31 ruhllatio
	Fix: Bug with TV API changes that causes unmatched Show/Sxx/Exx queries to return data
2016-05-31 DariusIII
	Fix: Remove doubled and wrong preinfo function ih Gamma theme utils.js
	Fix: PreDB page layout in Gamma theme.
	Fix: Links to colorbox images in Gamma theme.
2016-05-30 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x.
2015-05-29 DariusIII
	* Upd: Replace icons with font-awesome counterparts in Alpha theme.
2016-05-28 ruhllatio
	Fix: Greatly improve TV API search query when specifying ID/Season/Ep etc. Remove var_dump.
	Fix: Wrong array offset
2016-05-27 DariusIII
	* Upd: Use well-sm in all the themes.
	* Fix: Replace boostrap.min.css with Gamma theme custom bootstrap.css
	* Fix: Fix link to autosize.min.js in Alpha theme.
	* Fix: Fix tables layout in Gamma theme by removing table-striped attribute.
2016-05-26 niel